tests/errors/list_type_mismatch_division.dang
# This should fail: mixing String and Int lists in division
pub result = [] / ["foo"] / [3]
